K8S/command-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: commandservice-depl
spec: 
  replicas: 1
  selector:
    matchLabels:
      app: commandservice
  template: 
    metadata:
      labels:
        app: commandservice
    spec:
      containers: 
        - name: commandservice
          image: imtiaz1710/commandservice:latest
---
apiVersion: v1
kind: Service
metadata:
  name: commandservices-clusterip-srv
spec:
  type: ClusterIP
  selector:
    app: commandservice
  ports:
  - name: commandservice
    protocol: TCP
    port: 8080
    targetPort: 8080
