K8S/platform-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: platformservice-depl
spec: 
  replicas: 1
  selector:
    matchLabels:
      app: platformservice
  template: 
    metadata:
      labels:
        app: platformservice
    spec:
      containers: 
        - name: platformservice
          image: imtiaz1710/platformservice:latest
---
apiVersion: v1
kind: Service
metadata:
  name: platforms-clusterip-srv
spec:
  type: ClusterIP
  selector:
    app: platformservice
  ports:
  - name: PlatformService
    protocol: TCP
    port: 8080
    targetPort: 8080
