K8S/platform-np-srv.yaml
apiVersion: v1
kind: Service
metadata: 
  name: projectcrudtemplate-srv
spec:
  type: NodePort
  selector:
    app: projectcrudtemplate
  ports:
    - name: projectcrudtemplate
      protocol: TCP
      port: 8080
      targetPort: 8080
